# claude-code-feishu-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  HEARTBEAT.md  HUMAN_BEHAVIOR.md  LICENSE  Makefile  README.md  XHS.md  pyproject.toml
.claude/: settings.json
.claude/skills/codex-image-gen/: SKILL.md
.claude/skills/deepresearch-feishu/: SKILL.md  compare_data.py  research_state.py  sources.py  web_extract.py
.claude/skills/dependency-awareness/: SKILL.md
.claude/skills/feishu-card/: SKILL.md
.claude/skills/random-timer/: SKILL.md
.github/workflows/: test.yml
deploy/: feishu-claude.plist  feishu-claude.service
docs/superpowers/plans/: 2026-04-17-provider-bridge-implementation.md
docs/superpowers/specs/: 2026-04-17-provider-bridge-design.md
scripts/: migrate_reminder_crontab.sh
src/feishu_channel/: __init__.py  card.py  config.py  feishu.py  heartbeat.py  media.py  reminder.py  server.py
src/xiaobai/: __init__.py  config.py  mcp_server.py  reminders_cli.py
src/xiaobai/core/: __init__.py  (+12 more)
tests/: test_auth_circuit_breaker.py  test_card_protocol.py  test_channel_refactor.py  test_cursor_provider.py  test_feishu_api_client.py  test_follow_ups.py  test_gemini_provider.py  test_heartbeat_adaptive.py  test_hooks.py  test_mood.py  test_notification_adaptive.py  test_observability.py  test_persona.py  test_profile_refresh_nudge.py  test_provider_parity.py  test_provider_selection.py  test_providers.py  test_relationships_cache.py  test_routing.py  test_wechat_polling.py
workspace/state/: heartbeat_blacklist.txt  heartbeat_watchlist.json
(+49 files in other folders)
