[project]
name = "feishu-channel"
version = "0.1.0"
description = "Feishu Channel for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "lark-oapi>=1.5.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[project.scripts]
feishu-channel = "feishu_channel.server:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
