[project]
name = "xiaobai"
version = "0.2.0"
description = "Xiaobai — multi-channel MCP bot (Feishu + WeChat) for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "lark-oapi>=1.5.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "cryptography>=42.0",
    "qrcode>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
xiaobai = "xiaobai.mcp_server:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:lark_oapi.*",
    "ignore::DeprecationWarning:websockets.*",
]
